--- a/navidad.html
+++ b/navidad.html
@@ -9,6 +9,8 @@
 
 <h1>Navidad</h1>
 
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut possimus at inventore blanditiis aliquid sint, unde itaque, totam aperiam eligendi similique dolorem vero fuga provident sit voluptas, dolor molestias cumque.</p>
+
 <body>
     
 </body>
