Modifique redes sociales

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 </head>
 <body>
@@ -156,7 +157,9 @@
 
     <br><br>
 
-    <section class="separador"></section>
+    <section class="separador">
+
+    </section>
     <br><br>
 
     <section>
@@ -216,15 +219,17 @@
         <li class="nav-item"><a href="pages/contacto.html" class="nav-link px-2 text-white">Contacto</a></li>
       </ul>
       
-      <div class="d-flex py-4 my-4 border-top">
+      <div class="col-lg-6 col-md-12 col-sm-12 d-flex py-4 my-4 border-top">
         <p class="mb-0">&copy; 2021. Todos los derechos reservados.</p>
-      <ul class="col-md-4 list-unstyled d-flex justify-content-end">
-        <li class="ms-3"><a class="link-dark" href="#"><img src="multimedia/linkedin.png" alt="linkedin" class="img-fluid"></a></li>
-        <li class="ms-3"><a class="link-dark" href="#"><img src="multimedia/whatsapp.png" alt="whatsapp" class="img-fluid"></a></li>
-        <li class="ms-3"><a class="link-dark" href="#"><img src="multimedia/facebook.png" alt="facebook" class="img-fluid"></a></li>
-        <li class="ms-3"><a class="link-dark" href="#"><img src="multimedia/twitter.png" alt="twitter" class="img-fluid"></a></li>
-      </ul>
-    </div>
+      </div>
+
+      <div class="redes-container col-lg-6 col-md-12 col-sm-12 list-unstyled d-flex justify-content-end">
+        <ul><li><a href="#" class="whatsapp"><i class="fab fa-whatsapp"></i></a></li></ul>
+        <ul><li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li></ul>
+        <ul><li><a href="#" class="twitter"><i class="fab fa-twitter"></i></a></li></ul>
+        <ul><li><a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a></li></ul>
+      </div>
+    
     </footer>
 
     <script
