Modifique Nosotros para que sea responsive

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -81,7 +81,7 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-4">
+          <div class="col-lg-4 col-sm-12">
             
             <div class="card" style="width: auto;">
               <img src="../multimedia/elestudio.jpg" class="card-img-top" alt="oficinas">
@@ -93,7 +93,7 @@
             </div>
 
           </div>
-          <div class="col-8">
+          <div class="col-lg-8 col-sm-12">
             
             <p class="parrafoAzul">Fundado en 1975 en Córdoba, República Argentina.
 
