--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-          <button class="btn btn-outline-success fondoBuscar" id="fondoBuscar" type="submit">Buscar</button>
+          <button class="btn btn-outline-success" id="fondoBuscar" type="submit">Buscar</button>
         </form>
       </div>
     </div>
