Se agrego Hitos en Index

--- a/index.html
+++ b/index.html
@@ -122,6 +122,29 @@
     <section class="separador"></section>
     <br><br>
 
+    <section>
+      <div class="cointainer">
+        <div class="row hitosEstudio">
+          <div class="col-lg-6">
+            <h3 style="font-weight: bold;">Profesionales comprometidos</h3>
+            <h5>Desarrollamos, nutrimos y reunimos la gama más amplia y sólida de talento y experiencia legal necesaria para satisfacer las necesidades de nuestros clientes en un entorno en constante cambio y ritmo.</h5> 
+          </div>
+          <div class="hitosApartado col-lg-2">
+            <h2>46</h2>
+            <h5>años de experiencia</h5>
+          </div>
+          <div class="hitosApartado col-lg-2">
+            <h2>+15</h2>
+            <h5>areas de conocimiento</h5>
+          </div>
+          <div class="hitosApartado col-lg-2">
+            <h2>#1</h2>
+            <h5>en Derecho en el Interior del Pais</h5>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="seccionArticulosFlex">
         <div class="articuloSecundario">
             <h4 class="tituloAzul">Aumenta la tasa de ciberdelitos</h4>
