Modificaciones en noticias, suprimi separador

--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
         </div>
 
     </main>
-    
-    <section class="separador"></section>
+  
     <br><br>
 
     <section>
@@ -145,7 +144,7 @@
     <section>
 
       <div class="card-group">
-        <div class="card col-lg-4 col-sm-12" style="margin-right: 10px;">
+        <div class="card col-lg-4 col-sm-12">
           <img src="multimedia/fotonota2.jpg" alt="ciberdelitos" class="img-fluid card-img-top">
           <div class="card-body">
             <h5 class="card-title">Aumenta la tasa de ciberdelitos y estafas telefonicas</h5>
@@ -158,10 +157,10 @@
             <small class="text-muted">Publicado hace 2 horas</small>
           </div>
         </div>
-        <div class="card col-lg-4 col-sm-12" style="margin-right: 10px;">
+        <div class="card col-lg-4 col-sm-12">
           <img src="multimedia/fotonota3.jpg" alt="ciberdelitos" class="img-fluid card-img-top">
           <div class="card-body">
-            <h5 class="card-title">Se oficializaron los nuevos jueces de la Corte</h5>
+            <h5 class="card-title">Se oficializaron los nuevos jueces de la Corte Suprema de Justicia de la Nacion</h5>
             <p class="card-text articuloNoticia">El Gobierno Nacional oficializó este martes la designación de dos jueces en la Corte Suprema de Justicia, al tiempo que designó al representante del Poder Ejecutivo en el Consejo de la Magistratura, según los decretos 83 y 66, publicados en el Boletín Oficial.
 
               El primero designa "a los doctores Carlos Fernando Rosenkrantz (DNI 13.031.536) y Horacio Daniel Rosatti (DNI 12.696.450), en los términos del artículo 99, inciso 19, de la Constitución Nacional".</p>
