Modifique logo para que sea responsive

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
 <body class="container-fluid">
 <header>
     <div class="row logo">
-      <a href="index.html"
-        ><img src="multimedia/logofm.png" alt="logo" class="img-fluid" height="30%" width="30%"
-      /></a></div>
+
+      <a href="index.html"><img src="multimedia/logofm.png" alt="logo" class="img-fluid logoLg"/></a>
+    
+      </div>
+
+      <!-- height="30%" width="30%" -->
 </header>
 
 
