Modifique carrousel noticias

--- a/index.html
+++ b/index.html
@@ -88,23 +88,23 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="multimedia/fnota1.jpg" class="d-block w-100 fotoNota img-fluid" alt="foto cuota alimentaria">
-              <div class="carousel-caption d-none d-md-block carouselFondo">
+              <div class="carousel-caption d-md-block carouselFondo">
                 <h5>Desestiman planteo por cuota alimentaria fuera de término</h5>
-                <p>Lo resolvió un tribunal de Familia de Tigre, Buenos Aires, aplicando el plazo de dos años para reclamar...</p>
+                <p class="d-none">Lo resolvió un tribunal de Familia de Tigre, Buenos Aires, aplicando el plazo de dos años para reclamar...</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="multimedia/fnota2.jpg" class="d-block w-100" alt="foto ministerio publico">
-              <div class="carousel-caption d-none d-md-block carouselFondo">
+              <div class="carousel-caption d-md-block carouselFondo">
                 <h5>El Ministerio Público pidió una compensación económica</h5>
-                <p>Secretarios y funcionarios de los ministerios públicos reclamaron a la Corte Suprema...</p>
+                <p class="d-none">Secretarios y funcionarios de los ministerios públicos reclamaron a la Corte Suprema...</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="multimedia/fnota3.jpg" class="d-block w-100" alt="foto oil combustibles">
-              <div class="carousel-caption d-none d-md-block carouselFondo">
+              <div class="carousel-caption d-md-block carouselFondo">
                 <h5>Oil Combustibles: fiscal pidió condena para los acusados</h5>
-                <p>El fiscal Juan García Elorrio pidió condenar a cuatro años y ocho meses de prision...</p>
+                <p class="d-none">El fiscal Juan García Elorrio pidió condenar a cuatro años y ocho meses de prision...</p>
               </div>
             </div>
           </div>
@@ -126,19 +126,19 @@
       <div class="container-fluid">
         <div class="row hitosEstudio">
           <div class="col-lg-6 col-sm-12">
-            <h3 style="font-weight: bold;">Profesionales comprometidos</h3>
+            <h3 class="tituloGaramond">Profesionales comprometidos</h3>
             <h5>Desarrollamos, nutrimos y reunimos la gama más amplia y sólida de talento y experiencia legal necesaria para satisfacer las necesidades de nuestros clientes en un entorno en constante cambio y ritmo.</h5> 
           </div>
           <div class="hitosApartado col-lg-2 col-sm-12">
-            <h2>46</h2>
+            <h3 class="tituloEstadistica">46</h3>
             <h5>años de experiencia</h5>
           </div>
           <div class="hitosApartado col-lg-2 col-sm-12">
-            <h2>+15</h2>
+            <h3 class="tituloEstadistica">+15</h3>
             <h5>areas de conocimiento</h5>
           </div>
           <div class="hitosApartado col-lg-2 col-sm-12">
-            <h2>#1</h2>
+            <h3 class="tituloEstadistica">#1</h32>
             <h5>en Derecho en el Interior del Pais</h5>
           </div>
         </div>
@@ -155,7 +155,7 @@
             <p class="card-text articuloNoticia">La pandemia frenó la curva de muchos delitos menores en la Argentina, pero hizo crecer de manera exponencial a uno en particular: el electrónico. Según un reciente informe elaborado por la Unidad Fiscal Especializada en Ciberdelincuencia (Ufeci), los reportes que recibieron en el primer trimestre del año registraron un aumento que supera el 400 por ciento.  
 
               La estadística destaca primero una suba de un 36 % entre enero, febrero y marzo de 2019 y el mismo período del año siguiente. “En el primero de ellos recibimos un total de 581 reportes, mientras que en el primer trimestre de 2020 hubo 790”, se destaca en el informe.</p>
-              <a href="#" class="leerMas btn btn-dark">LEER MAS +</a>
+              <a href="#" class="leerMas btn btn-dark">LEER MAS</a>
           </div>
           <div class="card-footer">
             <small class="text-muted">Publicado hace 2 horas</small>
@@ -168,7 +168,7 @@
             <p class="card-text articuloNoticia">El Gobierno Nacional oficializó este martes la designación de dos jueces en la Corte Suprema de Justicia, al tiempo que designó al representante del Poder Ejecutivo en el Consejo de la Magistratura, según los decretos 83 y 66, publicados en el Boletín Oficial.
 
               El primero designa "a los doctores Carlos Fernando Rosenkrantz (DNI 13.031.536) y Horacio Daniel Rosatti (DNI 12.696.450), en los términos del artículo 99, inciso 19, de la Constitución Nacional".</p>
-              <a href="#" class="leerMas btn btn-dark">LEER MAS +</a>
+              <a href="#" class="leerMas btn btn-dark">LEER MAS</a>
           </div>
           <div class="card-footer">
             <small class="text-muted">Publicado hace 12 horas</small>
@@ -179,7 +179,7 @@
           <div class="card-body">
             <h5 class="card-title">Adecuan limitación de intereses y rechazan que el juez cargue con las costas</h5>
             <p class="card-text articuloNoticia">En una causa por el cobro de un pagaré, al modificar la sentencia de primera instancia, en cuanto había determinado un límite en los intereses moratorios a 50% nominal anual y ordenado que se adecuen al comúnmente utilizado en la justicia; esto es, dos por ciento mensual más la tasa pasiva del Banco Central de la República Argentina (BCRA), la Cámara 7ª Civil y Comercial de Córdoba rechazó que las costas de esta instancia sean impuestas al juez a quo, pues no evidenció error inexcusable de hecho o derecho..</p>
-            <a href="#" class="leerMas btn btn-dark">LEER MAS +</a>
+            <a href="#" class="leerMas btn btn-dark">LEER MAS</a>
           </div>
           <div class="card-footer">
             <small class="text-muted">Publicado ayer 20:35hs</small>
@@ -204,13 +204,13 @@
               </div>
             </div>
             <h3>Nueva ley de teletrabajo: claves y sus principales cambios</h3>
-            ¡Se acerca la próxima edición de las Conferencias FL!
+            <p style="text-align: justify;">¡Se acerca la próxima edición de las Conferencias FL!
 
             En esta ocasión, conversaremos sobre las implicancias de la nueva ley de teletrabajo: los recaudos que debe tomar el empleador, derechos y obligaciones de las partes, el derecho a la desconexión digital, los puntos posibles de conflicto, entre otras cuestiones relevantes.
 
             La charla estará a cargo de nuestros socios expertos en derecho laboral Rodrigo Solá Torino y Guillermo M. Osorio junto con María Cecilia Ruiz, gerente de legales de Danone en Latinoamérica.
 
-            ¿Cuándo? El 12 de noviembre a las 19:00hs (ARG) en vivo en nuestro perfil de LinkedIn.
+            ¿Cuándo? El 12 de noviembre a las 19:00hs (ARG) en vivo en nuestro perfil de LinkedIn.</p> 
           </div>
 
           <div class="col-sm-12 col-lg-1">
@@ -218,10 +218,10 @@
           </div>
           <div class="suscribirse col-sm-12 col-lg-4">
             <h3>Suscríbase a nuestros newsletters</h3>
-            Elaboramos periódicamente informes para clientes y boletines donde se analizan cambios en la legislación y cuestiones relacionadas con la industria, y su impacto en los mercados en que operan nuestros clientes.
+            <p style="text-align: justify;">Elaboramos periódicamente informes para clientes y boletines donde se analizan cambios en la legislación y cuestiones relacionadas con la industria, y su impacto en los mercados en que operan nuestros clientes.</p>
             <br>
             <br>
-            <button type="button" class="leerMas btn btn-dark">Suscribirme</button>
+            <button type="button" class="leerMas btn btn-dark">SUSCRIBIRME</button>
           </div>
         </div>
       </div>
@@ -236,11 +236,11 @@
     <br><br><br>
 
     <section>
-      <h3 class="tituloClientes">Confían en EstudioFL:</h3>
+      <h3 class="tituloGaramond">Confían en EstudioFL:</h3>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-2 linea"></div>
-          <div class="col-lg-10 linea2"></div>
+          <div class="col-lg-3 linea"></div>
+          <div class="col-lg-9 linea2"></div>
         </div>
       </div>
 
