--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta name="description" content="Estudio FM - Estudio Juridico de amplia trayectoria en el derecho. Grandes profesionales especializados y diversas areas del derecho. Con asiento en Cordoba, Argentina.">
 
-    <title>ESTUDIO FM - Lideres en Derecho</title>
+    <title>ESTUDIO FL - Lideres en Derecho</title>
 
     <!-- CSS BOOTSTRAP -->
 
@@ -32,14 +32,15 @@
 
 </head>
 <body class="container-fluid">
+  
 <header>
+
     <div class="row logo">
 
-      <a href="index.html"><img src="multimedia/logofm.png" alt="logo" class="img-fluid logoLg"/></a>
+      <a href="index.html"><img src="multimedia/logoEstudioFL.svg" alt="logo" class="img-fluid logoLg"/></a>
     
-      </div>
+    </div>
 
-      <!-- height="30%" width="30%" -->
 </header>
 
 
@@ -267,10 +268,10 @@
     <br><br>
 
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-      <p class="col-md-4 mb-0">Estudio FM</p>
+      <p class="col-md-4 mb-0 estudioFLfooter"><img src="multimedia/logoEstudioFL.svg" class="bi me-2" width="auto" height="40"></p>
   
       <a  class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-        <img src="multimedia/logo.png" class="bi me-2" width="40" height="32">
+        <!-- ESPACIO -->
       </a>
   
       <ul class="nav col-md-4 justify-content-end">
@@ -282,7 +283,7 @@
       </ul>
       
       <div class="col-lg-6 col-md-12 col-sm-12 d-flex py-4 my-4 border-top">
-        <p class="mb-0">&copy; 2021. Todos los derechos reservados.</p>
+        <p class="mb-0 derechosReservados">&copy; 2021. Todos los derechos reservados.</p>
       </div>
 
       <div class="redes-container col-lg-6 col-md-12 col-sm-12 list-unstyled d-flex justify-content-end">
