--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="keywords" content="abogado, estudio, cordoba, juridico, derecho, abogacia, despido, divorcio">
 
-    <meta name="description" content="Estudio FM - Estudio Juridico de amplia trayectoria en el derecho. Grandes profesionales especializados y diversas areas del derecho. Con asiento en Cordoba, Argentina.">
+    <meta name="description" content="Estudio FL - Estudio Juridico de amplia trayectoria en el derecho. Grandes profesionales especializados y diversas areas del derecho. Con asiento en Cordoba, Argentina.">
 
     <title>ESTUDIO FL - Lideres en Derecho</title>
 
