rehice pagina clientes

--- a/index.html
+++ b/index.html
@@ -249,17 +249,17 @@
       <div class="splide clientesCarrousel">
         <div class="splide__track">
           <div class="splide__list">
-            <div class="splide__slide"><img src="multimedia/clientes/amazon-2.svg" alt="logoaguas"></div>
-            <div class="splide__slide"><img src="multimedia/clientes/cat.svg" alt="logobcohipotecario"></div>
-            <div class="splide__slide"><img src="multimedia/clientes/coca-cola-logo.svg" alt="logoecogas"></div>
-            <div class="splide__slide"> <img src="multimedia/clientes/mc-logo.svg" alt="logoepec"></div>
-            <div class="splide__slide"> <img src="multimedia/clientes/microsoft.svg" alt="logococa"></div>
-            <div class="splide__slide"> <img src="multimedia/clientes/redbull.svg" alt="logonaranja"></div>
-            <div class="splide__slide"> <img src="multimedia/clientes/samsung-logo.svg" alt="logomotorola"></div>
-            <div class="splide__slide"> <img src="multimedia/clientes/shell.svg" alt="logosamsung"></div>
-            <div class="splide__slide"> <img src="multimedia/clientes/philips.svg" alt="logonaranja"></div>
-            <div class="splide__slide"> <img src="multimedia/clientes/visa.svg" alt="logomotorola"></div>
-            <div class="splide__slide"> <img src="multimedia/clientes/toyota.svg" alt="logomotorola"></div>
+            <div class="splide__slide"><img src="multimedia/clientes/amazon-2.svg" alt="amazon"></div>
+            <div class="splide__slide"><img src="multimedia/clientes/cat.svg" alt="cat"></div>
+            <div class="splide__slide"><img src="multimedia/clientes/coca-cola-logo.svg" alt="cocacola"></div>
+            <div class="splide__slide"> <img src="multimedia/clientes/mc-logo.svg" alt="mcdonalds"></div>
+            <div class="splide__slide"> <img src="multimedia/clientes/microsoft.svg" alt="microsoft"></div>
+            <div class="splide__slide"> <img src="multimedia/clientes/redbull.svg" alt="redbull"></div>
+            <div class="splide__slide"> <img src="multimedia/clientes/samsung-logo.svg" alt="samsung"></div>
+            <div class="splide__slide"> <img src="multimedia/clientes/shell.svg" alt="shell"></div>
+            <div class="splide__slide"> <img src="multimedia/clientes/philips.svg" alt="philips"></div>
+            <div class="splide__slide"> <img src="multimedia/clientes/visa.svg" alt="visa"></div>
+            <div class="splide__slide"> <img src="multimedia/clientes/toyota.svg" alt="toyota"></div>
           </div>
         </div>
       </div>
