--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -76,13 +76,13 @@
       </div>
     </nav>
 
+    <div class="container-fluid encabezadoClientes"> <p class="tituloEncabezado">CLIENTES</p> </div>
     <br>
-    <h3 class="tituloAzul">Confían en Estudio FL:</h3>
-    
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-3 linea"></div>
-        <div class="col-lg-9 linea2"></div>
+        <div class="col-lg-4 linea2"></div>
+        <div class="col-lg-4 linea"></div>
+        <div class="col-lg-4 linea2"></div>
       </div>
     </div>
     <br><br>
@@ -91,7 +91,7 @@
             <div class="listaClientes">
               <div class="clienteHijo">
                 <div class="card" style="width: 18rem;">
-                  <img src="../multimedia/cocacola.jpg" class="card-img-top" alt="Coca Cola">
+                  <img src="../multimedia/cocacola.jpg" class="card-img-top imagenCliente" alt="Coca Cola">
                   <div class="card-body">
                     <p class="card-text articuloCliente">The Coca-Cola Company es una corporación multinacional estadounidense de bebidas con sede en Atlanta, Georgia.</p>
                     <a href="https://www.cocacola.es/" class="leerMas btn btn-dark">Visitar sitio web</a>
@@ -100,7 +100,7 @@
               </div>
               <div class="clienteHijo">
                 <div class="card" style="width: 18rem;">
-                  <img src="../multimedia/clientes/cards/mcdonalds.jpg" class="card-img-top" alt="Mc Donalds">
+                  <img src="../multimedia/clientes/cards/mcdonalds.jpg" class="card-img-top imagenCliente" alt="Mc Donalds">
                   <div class="card-body">
                     <p class="card-text articuloCliente">McDonald's es una franquicia de restaurantes de comida rápida estadounidense con sede en Chicago, Illinois.​ Sus principales productos son las hamburguesas, las patatas fritas, los menús para el desayuno y los refrescos.</p>
                     <a href="https://www.mcdonalds.com.ar/" class="leerMas btn btn-dark">Visitar sitio web</a>
@@ -109,7 +109,7 @@
               </div>
               <div class="clienteHijo">
                 <div class="card" style="width: 18rem;">
-                  <img src="../multimedia/clientes/cards/amazon.jpg" class="card-img-top" alt="Amazon">
+                  <img src="../multimedia/clientes/cards/amazon.jpg" class="card-img-top imagenCliente" alt="Amazon">
                   <div class="card-body">
                     <p class="card-text articuloCliente">Amazon, Inc. es una compañía estadounidense de comercio electrónico y servicios de computación en la nube a todos los niveles con sede en la ciudad de Seattle, Washington.​</p>
                     <a href="https://www.amazon.com/-/es/" class="leerMas btn btn-dark">Visitar sitio web</a>
@@ -118,7 +118,7 @@
               </div>
               <div class="clienteHijo">
                 <div class="card" style="width: 18rem;">
-                  <img src="../multimedia/clientes/cards/cat.jpg" class="card-img-top" alt="Caterpillar">
+                  <img src="../multimedia/clientes/cards/cat.jpg" class="card-img-top imagenCliente" alt="Caterpillar">
                   <div class="card-body">
                     <p class="card-text articuloCliente">Caterpillar Inc.​ es una corporación de Estados Unidos con sede central en Peoria, Illinois. Caterpillar es el fabricante más grande del mundo de maquinaria para la construcción y equipos de minería, motores diésel y turbinas industriales de gas.</p>
                     <a href="https://www.caterpillar.com/" class="leerMas btn btn-dark">Visitar sitio web</a>
@@ -127,7 +127,7 @@
               </div>
               <div class="clienteHijo">
                 <div class="card" style="width: 18rem;">
-                  <img src="../multimedia/clientes/cards/samsung.jpg" class="card-img-top" alt="Samsung">
+                  <img src="../multimedia/clientes/cards/samsung.jpg" class="card-img-top imagenCliente" alt="Samsung">
                   <div class="card-body">
                     <p class="card-text articuloCliente">Samsung es un conglomerado de empresas multinacionales con sede en Seúl, Corea del Sur. Se trata del mayor grupo empresarial surcoreano, con numerosas filiales que abarcan negocios como la electrónica de consumo, tecnología, finanzas, aseguradoras, construcción, biotecnología y sector servicios.</p>
                     <a href="https://www.samsung.com/ar/" class="leerMas btn btn-dark">Visitar sitio web</a>
@@ -136,7 +136,7 @@
               </div>
               <div class="clienteHijo">
                 <div class="card" style="width: 18rem;">
-                  <img src="../multimedia/microsoft.jpg" class="card-img-top" alt="Microsoft">
+                  <img src="../multimedia/microsoft.jpg" class="card-img-top imagenCliente" alt="Microsoft">
                   <div class="card-body">
                     <p class="card-text articuloCliente">Microsoft es una compañía tecnológica multinacional con sede en Redmond, Washington, Estados Unidos. Microsoft es el acrónimo de microcomputer y software.</p>
                     <a href="https://www.microsoft.com/es-ar" class="leerMas btn btn-dark">Visitar sitio web</a>
@@ -145,7 +145,7 @@
               </div>
               <div class="clienteHijo">
                 <div class="card" style="width: 18rem;">
-                  <img src="../multimedia/clientes/cards/redbull.jpg" class="card-img-top" alt="Red Bull">
+                  <img src="../multimedia/clientes/cards/redbull.jpg" class="card-img-top imagenCliente" alt="Red Bull">
                   <div class="card-body">
                     <p class="card-text articuloCliente">Red Bull es una bebida energética distribuida por la compañía austríaca Red Bull GmbH.1​ Fue creada en los años 1980 por el austriaco Dietrich Mateschitz, a partir de una fórmula concebida por el tailandés Chaleo Yoovidhya, desarrollando un concepto único de marketing.</p>
                     <a href="https://www.redbull.com/ar-es/" class="leerMas btn btn-dark">Visitar sitio web</a>
@@ -154,7 +154,7 @@
               </div>
               <div class="clienteHijo">
                 <div class="card" style="width: 18rem;">
-                  <img src="../multimedia/clientes/cards/shell.jpg" class="card-img-top" alt="Shell">
+                  <img src="../multimedia/clientes/cards/shell.jpg" class="card-img-top imagenCliente" alt="Shell">
                   <div class="card-body">
                     <p class="card-text articuloCliente">La Royal Dutch Shell es una empresa de hidrocarburos anglo-neerlandesa que tiene intereses en los sectores petrolífero y del gas natural, así como del refinado de gasolinas. Es una de las mayores multinacionales del mundo, y una de las cuatro más grandes del sector petrolífero junto con BP, ExxonMobil y Total.</p>
                     <a href="https://www.shell.com.ar/" class="leerMas btn btn-dark">Visitar sitio web</a>
@@ -163,7 +163,7 @@
               </div>
               <div class="clienteHijo">
                 <div class="card" style="width: 18rem;">
-                  <img src="../multimedia/clientes/cards/philips.jpg" class="card-img-top" alt="Philips">
+                  <img src="../multimedia/clientes/cards/philips.jpg" class="card-img-top imagenCliente" alt="Philips">
                   <div class="card-body">
                     <p class="card-text articuloCliente">Koninklijke Philips N.V. conocida comúnmente como Philips es una de las empresas de tecnología más grandes e importantes del mundo. Está enfocada principalmente en los sectores de la electrónica y la asistencia sanitaria. Sus oficinas principales se encuentran en Ámsterdam y en otras ciudades de los Países Bajos.</p>
                     <a href="https://www.philips.com.ar/" class="leerMas btn btn-dark">Visitar sitio web</a>
@@ -172,7 +172,7 @@
               </div>
               <div class="clienteHijo">
                 <div class="card" style="width: 18rem;">
-                  <img src="../multimedia/clientes/cards/visa.jpg" class="card-img-top" alt="Visa">
+                  <img src="../multimedia/clientes/cards/visa.jpg" class="card-img-top imagenCliente" alt="Visa">
                   <div class="card-body">
                     <p class="card-text articuloCliente">Visa Inc. es una multinacional de servicios financieros con sede en Foster City, California, Estados Unidos.​ Facilita las transferencias electrónicas de fondos en todo el mundo, más comúnmente a través de tarjetas de crédito, débito, prepago, regalo y monedero con la marca Visa.</p>
                     <a href="https://www.visa.com.ar/" class="leerMas btn btn-dark">Visitar sitio web</a>
@@ -181,7 +181,7 @@
               </div>
               <div class="clienteHijo">
                 <div class="card" style="width: 18rem;">
-                  <img src="../multimedia/clientes/cards/toyota.jpg" class="card-img-top" alt="Toyota">
+                  <img src="../multimedia/clientes/cards/toyota.jpg" class="card-img-top imagenCliente" alt="Toyota">
                   <div class="card-body">
                     <p class="card-text articuloCliente">Toyota Motor Corporation ​ mejor conocida como Toyota, es una empresa japonesa de fabricación de automóviles. Fundada en 1933 por Kiichiro Toyoda, su sede principal está ubicada en Toyota y Bunkyō aunque, por su carácter multinacional, cuenta con fábricas y sedes en varios países.</p>
                     <a href="https://www.toyota.com.ar/" class="leerMas btn btn-dark">Visitar sitio web</a>
