--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -77,16 +77,16 @@
     </nav>
 
     <section class="elEstudio">
-      <br>
-      <h3 class="tituloAzul">El Estudio</h3>
 
+      <div class="container-fluid encabezadoNosotros"> <p class="tituloEncabezado">EL ESTUDIO</p> </div>
+      <br>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-3 linea"></div>
-          <div class="col-lg-9 linea2"></div>
+          <div class="col-lg-4 linea2"></div>
+          <div class="col-lg-4 linea"></div>
+          <div class="col-lg-4 linea2"></div>
         </div>
       </div>
-
       <br><br>
 
       <div class="container-fluid">
@@ -131,8 +131,9 @@
 
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-3 linea"></div>
-          <div class="col-lg-9 linea2"></div>
+          <div class="col-lg-4 linea2"></div>
+          <div class="col-lg-4 linea"></div>
+          <div class="col-lg-4 linea2"></div>
         </div>
       </div>
 
